Fixed theme button color in dark mode

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -54,7 +54,7 @@
 	margin: 0;
 }
 
-:global(.btn-cust-light) {
+:global(.btn.btn-cust-light) {
 	--bs-btn-color: var(--bs-color);
 	--bs-btn-bg: var(--bs-tertiary-bg);
 	--bs-btn-border-color: var(--bs-border-color);
@@ -71,7 +71,7 @@
 	--bs-btn-disabled-border-color: #6c757d;
 }
 
-:global([data-bs-theme="dark"] .btn-cust-light) {
+:global([data-bs-theme="dark"] .btn.btn-cust-light) {
 	--bs-btn-hover-bg: #33383d;
 	--bs-btn-hover-border-color: #51585F;
 	--bs-btn-active-color: #89a0a7;
